docs(i18n): correct github translation in arabic locale

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -3,7 +3,7 @@
     "home": "الرئيسية",
     "api": "واجهة البرمجة",
     "docs": "التوثيق",
-    "github": "جيت هاب",
+    "github": "GitHub",
     "logo": "واجهة برمجة البلديات"
   },
   "hero": {
