add interactive map feature

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -3,6 +3,7 @@
     "home": "الرئيسية",
     "api": "واجهة البرمجة",
     "docs": "التوثيق",
+    "map": "الخريطة",
     "github": "GitHub",
     "logo": "واجهة برمجة البلديات"
   },
@@ -30,6 +31,13 @@
     "title": "نظرة عامة على البيانات",
     "governorates": "الولايات",
     "delegations": "المعتمديات"
+  },
+  "map": {
+    "title": "خريطة تفاعلية",
+    "ZoomInstruction": "كيفية رؤية العلامات",
+    "ZoomInstructionDescription": "قم بتكبير الخرائط (مستوى 10+) لرؤية العلامات في المناطق المحددة",
+    "postalCode": "الرمز البريدي",
+    "coordinates": "الإحداثيات"
   },
   "playground": {
     "title": "ساحة تجريب الواجهة",
